--- a/app/views/psd-revised-flow/search/risk-assessments.html
+++ b/app/views/psd-revised-flow/search/risk-assessments.html
@@ -190,7 +190,7 @@
                 <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">All in All+ Car Seat
               </td>
               <td class="govuk-table__cell">Submitted</td>
-              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red">Serious</tag></td>      
+              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
               <td class="govuk-table__cell">12 Jan 2024</td>
             </tr>
             <tr class="govuk-table__row">
@@ -199,7 +199,7 @@
                 <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Tefal Proexpress Iron
                 </td>
               <td class="govuk-table__cell">Draft</td>
-              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow">Medium</tag></td>      
+              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow" style="letter-spacing: 0px">Medium</tag></td>      
               <td class="govuk-table__cell">12 Jan 2024</td>
             </tr>
             <tr class="govuk-table__row">
@@ -208,7 +208,7 @@
                 <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Day Plus Electric Pruning Shears
                 </td>
               <td class="govuk-table__cell">Draft</td>
-              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--blue">Low</tag></td>      
+              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--blue" style="letter-spacing: 0px">Low</tag></td>      
               <td class="govuk-table__cell">12 Jan 2024</td>
             </tr>
             <tr class="govuk-table__row">
@@ -217,7 +217,7 @@
                 <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">VSSHE Cat Toy Laser Pen
                 </td>
               <td class="govuk-table__cell">Submitted</td>
-              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--blue">Low</tag></td>      
+              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--blue" style="letter-spacing: 0px">Low</tag></td>      
               <td class="govuk-table__cell">12 Jan 2024</td>
             </tr>
             <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
@@ -225,7 +225,7 @@
               <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Baby Walker 608-1
               </td>
             <td class="govuk-table__cell">Draft</td>
-            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red">Serious</tag></td>      
+            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
             <td class="govuk-table__cell">12 Jan 2024</td>
           </tr>
           <tr class="govuk-table__row">
@@ -234,7 +234,7 @@
               <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">AC Adapter GJ6754PS
               </td>
             <td class="govuk-table__cell">Submitted</td>
-            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--blue">Low</tag></td>      
+            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--blue" style="letter-spacing: 0px">Low</tag></td>      
             <td class="govuk-table__cell">12 Jan 2024</td>
           </tr>
           <tr class="govuk-table__row">
@@ -243,7 +243,7 @@
               <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Sacmi Packaging S.p.A LT13 forming machine exit conveyor
               </td>
             <td class="govuk-table__cell">Submitted</td>
-            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red">Serious</tag></td>      
+            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
             <td class="govuk-table__cell">12 Jan 2024</td>
           </tr>
           <tr class="govuk-table__row">
@@ -252,7 +252,7 @@
               <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Fan Heater XH-1201
               </td>
             <td class="govuk-table__cell">Draft</td>
-            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow">Medium</tag></td>      
+            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow" style="letter-spacing: 0px" style="letter-spacing: 0px">Medium</tag></td>      
             <td class="govuk-table__cell">12 Jan 2024</td>
           </tr>
           <tr class="govuk-table__row">
@@ -261,7 +261,7 @@
               <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">WaxRhyed Soldering Iron Kit
               </td>
             <td class="govuk-table__cell">Draft</td>
-            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow">Medium</tag></td>      
+            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow" style="letter-spacing: 0px">Medium</tag></td>      
             <td class="govuk-table__cell">12 Jan 2024</td>
           </tr>
           <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
@@ -269,7 +269,7 @@
             <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Creworks Ultrasonic Cleaner 40A
             </td>
           <td class="govuk-table__cell">Submitted</td>
-          <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red">Serious</tag></td>      
+          <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
           <td class="govuk-table__cell">12 Jan 2024</td>
         </tr>
 
