--- a/app/views/layout-new-header-risk-assessments.html
+++ b/app/views/layout-new-header-risk-assessments.html
@@ -86,7 +86,7 @@
 
 <div class="govuk-width-container govuk-phase-banner">
   <p class="govuk-phase-banner__content">
-    <strong class="govuk-tag govuk-phase-banner__content__tag">
+    <strong class="govuk-tag govuk-phase-banner__content__tag" style="letter-spacing: 0px">
       Beta
     </strong>
     <span class="govuk-phase-banner__text">
