--- a/app/views/psd-revised-flow/add-new-product/add-product-information-bl.html
+++ b/app/views/psd-revised-flow/add-new-product/add-product-information-bl.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_home.html" %}
 
 {% block pageTitle %}
-Edit product information – {{ serviceName }} – GOV.UK Prototype Kit
+Add product information – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% set title = "Add product" %}
