--- a/app/assets/sass/new-header.scss
+++ b/app/assets/sass/new-header.scss
@@ -356,3 +356,17 @@ body .autocomplete-input:focus {
   align-items: baseline;
   gap: 10px;
 }
+
+.table-container {
+  display: flex;
+  align-items: flex-start;
+}
+
+.image-table-container {
+  flex: 0 0 auto;
+  margin-right: 20px;
+}
+
+.text-table-container {
+  flex: 1;
+}
