--- a/app/views/psd-revised-flow/search/account-settings.html
+++ b/app/views/psd-revised-flow/search/account-settings.html
@@ -29,7 +29,7 @@
     <ul class="govuk-list">
       <li class="app-chevron-card-list__entry">
         <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-          <a href="#" class="govuk-link app-chevron-card-list__link" style="text-decoration: none">Your account</a>
+          <a href="your-account" class="govuk-link app-chevron-card-list__link" style="text-decoration: none">Your account</a>
         </h3>
         <p class="govuk-body">Review and update your name, or for changes to other details, contact us at <a href="#" >opss.enquiries@beis.gov.uk</a></p>
       </li>
@@ -48,7 +48,6 @@
     </ul>
   </div>
 </div>
-
 
 
 {% endblock %}
