--- a/app/views/psd-revised-flow/search/homepage-dimitri.html
+++ b/app/views/psd-revised-flow/search/homepage-dimitri.html
@@ -47,13 +47,13 @@
       <ul class="govuk-list">
         <li class="app-chevron-card-list__entry">
           <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-            <a href="#" class="govuk-link app-chevron-card-list__link " style="text-decoration: none">Create a product safety notification</a>
+            <a href="task-list" class="govuk-link app-chevron-card-list__link " style="text-decoration: none">Create a product safety notification</a>
           </h3>
           <p class="govuk-body">Report unsafe, non-compliant as well as safe and compliant products.</p>
         </li>
         <li class="app-chevron-card-list__entry">
           <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-            <a href="#" class="govuk-link app-chevron-card-list__link" style="text-decoration: none">Update existing product safety notifications</a>
+            <a href="notifications" class="govuk-link app-chevron-card-list__link" style="text-decoration: none">Update existing product safety notifications</a>
           </h3>
           <p class="govuk-body">Easily update and manage existing safety notifications.</p>
         </li>
