--- a/app/views/psd-revised-flow/search/notifications.html
+++ b/app/views/psd-revised-flow/search/notifications.html
@@ -22,7 +22,9 @@
 
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l govuk-!-margin-bottom-9">Notifications</h1>
-    </div>        
+    </div>     
+
+    <form class="form" action="notifications" method="post">
 
     <div class="govuk-grid-column-one-third">
       <div class="govuk-form-group bottom-box opss-text-align-right opss-text-align-bottom">
@@ -33,6 +35,8 @@
     </div>
   </div>
 </div>
+
+</form>
 
 
 <!-- Search & sort -->
