--- a/app/views/psd-revised-flow/search/homepage-dimitri.html
+++ b/app/views/psd-revised-flow/search/homepage-dimitri.html
@@ -71,10 +71,10 @@ function toggleSearch2() {
 
 document.addEventListener("DOMContentLoaded", function() {
   var countries = [
-    {name: "Swan Gas Hob", info: "Product", url: "product"},
-    {name: "Swan Gas Hob elbow joint failure", info: "Notification"},
-    {name: "Swan Gas Hob - Risk assessment", info: "Risk assessment"},
-    {name: "Swan Gas Hob - Test report 1209357862.docx", info: "Document"},
+    {name: "Swan Gas Hob elbow joint failure", info: "Notification", url: "notification"},
+    {name: "Swan Gas Hob SXB7040B 60cm", info: "Product", url: "product"},
+    {name: "Swan Gas Hob SXB7040B 60cm risk assessment", info: "Risk assessment", url: "risk-assessment"},
+    {name: "Swan Gas Hob: Test report 1209357862.docx", info: "Document", url: "../../public/pdfs/test-report.pdf"},
     {name: "Swan Trading Ltd", info: "Business"},
   ];
 
