--- a/app/views/psd-revised-flow/search/products.html
+++ b/app/views/psd-revised-flow/search/products.html
@@ -167,7 +167,7 @@
                     <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="#">Acer Aspire 3 </a>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Electricals</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Laptop</p>
-                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-425</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>8763-2344</p>
                     <details class="govuk-details govuk-!-margin-bottom-0">
                       <summary class="govuk-details__summary govuk-body-xs">
                         <span class="govuk-details__summary-text">
@@ -194,7 +194,7 @@
                     <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="#">Acqua di Parma Colonia Eau de Cologne</a>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Beauty</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Fragrance</p>
-                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-345</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>2466-2882</p>
                     <details class="govuk-details govuk-!-margin-bottom-0">
                       <summary class="govuk-details__summary govuk-body-xs">
                         <span class="govuk-details__summary-text">
@@ -221,7 +221,7 @@
                     <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="#">Adidas Power VI Recycled Backpack</a>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Sport & leisure</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Bag</p>
-                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-623</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>9822-1005</p>
                     <details class="govuk-details govuk-!-margin-bottom-0">
                       <summary class="govuk-details__summary govuk-body-xs">
                         <span class="govuk-details__summary-text">
@@ -249,7 +249,7 @@
                     <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="#">Alessi Pepper Mill</a>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Tableware</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Pepper mill</p>
-                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-622</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>7809-1984</p>
                     <details class="govuk-details govuk-!-margin-bottom-0">
                       <summary class="govuk-details__summary govuk-body-xs">
                         <span class="govuk-details__summary-text">
@@ -276,7 +276,7 @@
                     <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="#">Alpina AL-727LNS4H6 Startimer Chronograph</a>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Timepieces</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Watch</p>
-                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-146</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>1874-5782</p>
                     <details class="govuk-details govuk-!-margin-bottom-0">
                       <summary class="govuk-details__summary govuk-body-xs">
                         <span class="govuk-details__summary-text">
@@ -304,7 +304,7 @@
                     <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="#">American Crew Fiber™ Grooming Foam</a>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Haircare</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Hair styling</p>
-                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-836</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>3252-8815</p>
                     <details class="govuk-details govuk-!-margin-bottom-0">
                       <summary class="govuk-details__summary govuk-body-xs">
                         <span class="govuk-details__summary-text">
@@ -331,7 +331,7 @@
                     <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="#">Anglepoise Type 75 Lamp</a>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Lighting</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Desk lamp</p>
-                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-382</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>0285-2875</p>
                     <details class="govuk-details govuk-!-margin-bottom-0">
                       <summary class="govuk-details__summary govuk-body-xs">
                         <span class="govuk-details__summary-text">
@@ -359,7 +359,7 @@
                     <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="#">Antler Chelsea Overnight Holdall</a>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Sport & leisure</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Bag</p>
-                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-823</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>2570-1753</p>
                     <details class="govuk-details govuk-!-margin-bottom-0">
                       <summary class="govuk-details__summary govuk-body-xs">
                         <span class="govuk-details__summary-text">
@@ -386,7 +386,7 @@
                     <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="#">Asics Gel-Trabuco 12</a>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Sport & leisure</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Running shoes</p>
-                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-910</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>0135-7652</p>
                     <details class="govuk-details govuk-!-margin-bottom-0">
                       <summary class="govuk-details__summary govuk-body-xs">
                         <span class="govuk-details__summary-text">
@@ -414,7 +414,7 @@
                     <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="#">Audio-Technica AT-LP60XBT</a>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Electrical</p>
                     <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Turntable</p>
-                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>psd-293</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>5704-3254</p>
                     <details class="govuk-details govuk-!-margin-bottom-0">
                       <summary class="govuk-details__summary govuk-body-xs">
                         <span class="govuk-details__summary-text">
@@ -430,7 +430,35 @@
                   </div>
               </td>
               <td class="govuk-table__cell">16 Jul 2022</td>
+            </tr>        
+            <tr class="govuk-table__row" style="display: none;">
+              <td class="govuk-table__cell">
+                <div class="table-container">
+                  <div class="image-table-container">
+                    <img src="../../public/images/small-hob.png" alt="Image" class="table-image">
+                  </div>
+                  <div class="text-container">
+                    <a class="govuk-heading-s govuk-!-margin-bottom-1" style="color: #1d70b8; text-decoration: none" href="product">Swan Gas Hob SXB7040B 60cm</a>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Category: </strong>Gas appliances and components</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Sub-category: </strong>Gas hob</p>
+                    <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>PSD ref: </strong>2401-0067</p>
+                    <details class="govuk-details govuk-!-margin-bottom-0">
+                      <summary class="govuk-details__summary govuk-body-xs">
+                        <span class="govuk-details__summary-text">
+                          More details
+                        </span>
+                      </summary>
+                      <div class="govuk-details__text">
+                        <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Barcode: </strong>7 346785 789345</p>
+                        <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Other product identifiers: </strong>ASIN: 743525</p>    
+                        <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Description: </strong>Comes in box 90 x 90 x 40 cm, weight 3.6kg, 4 gas burners, 4 knobs, gun metal grey.</p>    
+                    </details>
+                      </div>
+                  </div>
+              </td>
+              <td class="govuk-table__cell">14 Feb 2024</td>
             </tr>                                         
+                                 
           </tbody>
         </table>
 
@@ -440,6 +468,41 @@
   </div>
 
   <script>
+
+document.addEventListener("DOMContentLoaded", function() {
+    var searchButton = document.getElementById("searchButton");
+    searchButton.addEventListener("click", function() {
+      searchTable();
+    });
+
+    function searchTable() {
+      var input, filter, table, tr, td, i, txtValue;
+      input = document.getElementById("searchInput");
+      filter = input.value.toUpperCase();
+      table = document.getElementsByTagName("table")[0];
+      tr = table.getElementsByTagName("tr");
+      var count = 0;
+      for (i = 0; i < tr.length; i++) {
+        td = tr[i].getElementsByTagName("td")[0];
+        if (td) {
+          txtValue = td.textContent || td.innerText;
+          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            tr[i].style.display = "";
+            count++;
+          } else {
+            tr[i].style.display = "none";
+          }
+        }
+      }
+      // Limiting table to 10 entries
+      if (count > 10) {
+        for (i = 10; i < tr.length; i++) {
+          tr[i].style.display = "none";
+        }
+      }
+    }
+  });
+
     // Function to switch tabs
     function selectTab(event, tabIndex) {
         event.preventDefault();
