--- a/app/views/psd-revised-flow/search/risk-assessments.html
+++ b/app/views/psd-revised-flow/search/risk-assessments.html
@@ -184,6 +184,17 @@
             </tr>
           </thead>
           <tbody class="govuk-table__body">
+
+            <tr class="govuk-table__row">
+              <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
+                <strong>AC Adapter for Xbox One fault</strong>
+                <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">AC Adapter GJ6754PS
+                </td>
+              <td class="govuk-table__cell">Submitted</td>
+              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--blue" style="letter-spacing: 0px">Low</tag></td>      
+              <td class="govuk-table__cell">12 Jan 2024</td>
+            </tr>
+  
             <tr class="govuk-table__row">
               <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
                 <strong>All in All+ Car Seat - lack of protection</strong>
@@ -193,15 +204,27 @@
               <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
               <td class="govuk-table__cell">12 Jan 2024</td>
             </tr>
+
             <tr class="govuk-table__row">
-              <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-                <strong>Tefal Proexpress Iron - Electrical fault</strong>
-                <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Tefal Proexpress Iron
-                </td>
-              <td class="govuk-table__cell">Draft</td>
-              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow" style="letter-spacing: 0px">Medium</tag></td>      
-              <td class="govuk-table__cell">12 Jan 2024</td>
-            </tr>
+            <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
+              <strong>Baby Walker build issues</strong>
+              <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Baby Walker 608-1
+              </td>
+            <td class="govuk-table__cell">Draft</td>
+            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
+            <td class="govuk-table__cell">12 Jan 2024</td>
+          </tr>
+
+          <tr class="govuk-table__row">
+          <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
+            <strong>Creworks Ultrasonic Cleaner</strong>
+            <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Creworks Ultrasonic Cleaner 40A
+            </td>
+          <td class="govuk-table__cell">Submitted</td>
+          <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
+          <td class="govuk-table__cell">12 Jan 2024</td>
+        </tr>
+
             <tr class="govuk-table__row">
               <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
                 <strong>Day Plus Electric Pruning Shears</strong>
@@ -211,67 +234,66 @@
               <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--blue" style="letter-spacing: 0px">Low</tag></td>      
               <td class="govuk-table__cell">12 Jan 2024</td>
             </tr>
+
             <tr class="govuk-table__row">
               <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-                <strong>VSSHE Cat Toy Laser Pen - eysight loss</strong>
-                <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">VSSHE Cat Toy Laser Pen
+                <strong>Fan Heater XH-1201</strong>
+                <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Fan Heater XH-1201
+                </td>
+              <td class="govuk-table__cell">Draft</td>
+              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow" style="letter-spacing: 0px" style="letter-spacing: 0px">Medium</tag></td>      
+              <td class="govuk-table__cell">12 Jan 2024</td>
+            </tr>  
+
+            <tr class="govuk-table__row">
+              <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
+                <strong>FSSHE Cat Toy Laser Pen - eysight loss</strong>
+                <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">FSSHE Cat Toy Laser Pen
                 </td>
               <td class="govuk-table__cell">Submitted</td>
               <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--blue" style="letter-spacing: 0px">Low</tag></td>      
               <td class="govuk-table__cell">12 Jan 2024</td>
             </tr>
-            <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-              <strong>Baby Walker build issues</strong>
-              <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Baby Walker 608-1
+
+            <tr class="govuk-table__row">
+              <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
+                <strong>LT13 forming conveyor electrical fault</strong>
+                <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Dacmi Packaging S.p.A LT13 forming machine exit conveyor
+                </td>
+              <td class="govuk-table__cell">Submitted</td>
+              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
+              <td class="govuk-table__cell">12 Jan 2024</td>
+            </tr>
+            <tr class="govuk-table__row">
+              <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
+                <strong>Rhyed Soldering Iron Kit fault</strong>
+                <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Rhyed Soldering Iron Kit
+                </td>
+              <td class="govuk-table__cell">Draft</td>
+              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow" style="letter-spacing: 0px">Medium</tag></td>      
+              <td class="govuk-table__cell">12 Jan 2024</td>
+            </tr>
+  
+            <tr class="govuk-table__row">
+              <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
+                <strong>Russell Hobs Proexpress Iron - Electrical fault</strong>
+                <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Russell Hobs Proexpress Iron
+                </td>
+              <td class="govuk-table__cell">Draft</td>
+              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow" style="letter-spacing: 0px">Medium</tag></td>      
+              <td class="govuk-table__cell">12 Jan 2024</td>
+            </tr>
+
+            <tr class="govuk-table__row" style="display: none;">
+              <td class="govuk-table__cell" >
+                <a href="risk-assessment" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;" >Swan Gas Hob SXB7040B 60cm</a>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2401-0067</p>
               </td>
-            <td class="govuk-table__cell">Draft</td>
-            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
-            <td class="govuk-table__cell">12 Jan 2024</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-              <strong>AC Adapter for Xbox One fault</strong>
-              <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">AC Adapter GJ6754PS
-              </td>
-            <td class="govuk-table__cell">Submitted</td>
-            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--blue" style="letter-spacing: 0px">Low</tag></td>      
-            <td class="govuk-table__cell">12 Jan 2024</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-              <strong>LT13 forming conveyor electrical fault</strong>
-              <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Sacmi Packaging S.p.A LT13 forming machine exit conveyor
-              </td>
-            <td class="govuk-table__cell">Submitted</td>
-            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
-            <td class="govuk-table__cell">12 Jan 2024</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-              <strong>Fan Heater XH-1201</strong>
-              <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Fan Heater XH-1201
-              </td>
-            <td class="govuk-table__cell">Draft</td>
-            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow" style="letter-spacing: 0px" style="letter-spacing: 0px">Medium</tag></td>      
-            <td class="govuk-table__cell">12 Jan 2024</td>
-          </tr>
-          <tr class="govuk-table__row">
-            <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-              <strong>WaxRhyed Soldering Iron Kit fault</strong>
-              <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">WaxRhyed Soldering Iron Kit
-              </td>
-            <td class="govuk-table__cell">Draft</td>
-            <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--yellow" style="letter-spacing: 0px">Medium</tag></td>      
-            <td class="govuk-table__cell">12 Jan 2024</td>
-          </tr>
-          <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-            <strong>Creworks Ultrasonic Cleaner</strong>
-            <p class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-1" style="color: #505a5f;">Creworks Ultrasonic Cleaner 40A
-            </td>
-          <td class="govuk-table__cell">Submitted</td>
-          <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
-          <td class="govuk-table__cell">12 Jan 2024</td>
-        </tr>
+              <td class="govuk-table__cell">Submitted</td>
+              <td class="govuk-table__cell"><tag class="govuk-tag govuk-tag--red" style="letter-spacing: 0px">Serious</tag></td>      
+              <td class="govuk-table__cell">12 Jan 2024</td>
+            </tr>
+
 
         </tbody>
         </table>
@@ -284,6 +306,43 @@
   </div>
 
   <script>
+
+
+document.addEventListener("DOMContentLoaded", function() {
+    var searchButton = document.getElementById("searchButton");
+    searchButton.addEventListener("click", function() {
+      searchTable();
+    });
+
+    function searchTable() {
+      var input, filter, table, tr, td, i, txtValue;
+      input = document.getElementById("searchInput");
+      filter = input.value.toUpperCase();
+      table = document.getElementsByTagName("table")[0];
+      tr = table.getElementsByTagName("tr");
+      var count = 0;
+      for (i = 0; i < tr.length; i++) {
+        td = tr[i].getElementsByTagName("td")[0];
+        if (td) {
+          txtValue = td.textContent || td.innerText;
+          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            tr[i].style.display = "";
+            count++;
+          } else {
+            tr[i].style.display = "none";
+          }
+        }
+      }
+      // Limiting table to 10 entries
+      if (count > 10) {
+        for (i = 10; i < tr.length; i++) {
+          tr[i].style.display = "none";
+        }
+      }
+    }
+  });
+
+
     // Function to switch tabs
     function selectTab(event, tabIndex) {
         event.preventDefault();
