--- a/app/views/psd-revised-flow/search/notifications.html
+++ b/app/views/psd-revised-flow/search/notifications.html
@@ -233,48 +233,16 @@
           <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
               <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-                <strong>All in All+ Car Seat - lack of protection</strong>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2310-0004</p>
+                <strong>AC Adapter for Xbox One</strong>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2401-0067</p>
                 <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>BHR-98567-89D</p>
                 <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Injury</p>
                 <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe</p>
               </td>
               <td class="govuk-table__cell">Submitted</td>
               <td class="govuk-table__cell">12 Jan 2024</td>
-            </tr>
+            </tr>  
             <tr class="govuk-table__row">
-              <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-                <strong>Tefal Proexpress Iron - Electrical fault</strong>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2310-0004</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>JHD-27783-46X</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Electric shock</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe & Non-compliant</p>
-              </td>
-              <td class="govuk-table__cell">Draft</td>
-              <td class="govuk-table__cell">12 Jan 2024</td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-                <strong>Day Plus Electric Pruning Shears sold via eBay</strong>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>8239-1734</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>GUS-85803-39G</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Electric shock</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe & Non-compliant</p>
-              </td>
-              <td class="govuk-table__cell">Draft</td>
-              <td class="govuk-table__cell">12 Jan 2024</td>
-            </tr>
-            <tr class="govuk-table__row">
-              <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-                <strong>VSSHE Cat Toy Laser Pen</strong>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>5234-6322</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>GHD-66234-84H</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Damage to sight</p>
-                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe</p>
-              </td>
-              <td class="govuk-table__cell">Submitted</td>
-              <td class="govuk-table__cell">12 Jan 2024</td>
-            </tr>
             <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
               <strong>Baby Walker 608-1</strong>
               <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2402-0016</p>
@@ -285,12 +253,23 @@
             <td class="govuk-table__cell">Draft</td>
             <td class="govuk-table__cell">12 Jan 2024</td>
           </tr>
-          <tr class="govuk-table__row">
+            <tr class="govuk-table__row">
+              <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
+                <strong>All in All+ Car Seat - lack of protection</strong>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2310-0004</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>BHR-98567-89D</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Injury</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe</p>
+              </td>
+              <td class="govuk-table__cell">Submitted</td>
+              <td class="govuk-table__cell">12 Jan 2024</td>
+            </tr>
+            <tr class="govuk-table__row">
             <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-              <strong>AC Adapter for Xbox One</strong>
-              <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2401-0067</p>
-              <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>BHR-98567-89D</p>
-              <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Injury</p>
+              <strong>Creworks Ultrasonic Cleaner 40A</strong>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2310-0182</p>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>KBV-80674-83M</p>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Serious risk of injuries</p>
               <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe</p>
             </td>
             <td class="govuk-table__cell">Submitted</td>
@@ -298,13 +277,24 @@
           </tr>
           <tr class="govuk-table__row">
             <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-              <strong>Sacmi Packaging S.p.A LT13 forming machine exit conveyor</strong>
+              <strong>Dacmi Packaging S.p.A LT13 forming machine exit conveyor</strong>
               <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2401-0058</p>
               <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>JHD-27783-46X</p>
               <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Electric shock</p>
               <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe & Non-compliant</p>
             </td>
             <td class="govuk-table__cell">Submitted</td>
+            <td class="govuk-table__cell">12 Jan 2024</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
+              <strong>Day Plus Electric Pruning Shears sold via eBay</strong>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>8239-1734</p>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>GUS-85803-39G</p>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Electric shock</p>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe & Non-compliant</p>
+            </td>
+            <td class="govuk-table__cell">Draft</td>
             <td class="govuk-table__cell">12 Jan 2024</td>
           </tr>
           <tr class="govuk-table__row">
@@ -320,7 +310,18 @@
           </tr>
           <tr class="govuk-table__row">
             <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-              <strong>WaxRhyed Soldering Iron Kit sold via Amazon</strong>
+              <strong>FSSHE Cat Toy Laser Pen</strong>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>5234-6322</p>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>GHD-66234-84H</p>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Damage to sight</p>
+              <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe</p>
+            </td>
+            <td class="govuk-table__cell">Submitted</td>
+            <td class="govuk-table__cell">12 Jan 2024</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
+              <strong>Rhyed Soldering Iron Kit sold via Amazon</strong>
               <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2312-0119</p>
               <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>GHD-66234-84H</p>
               <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Damage to sight</p>
@@ -329,16 +330,28 @@
             <td class="govuk-table__cell">Draft</td>
             <td class="govuk-table__cell">12 Jan 2024</td>
           </tr>
-          <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
-            <strong>Creworks Ultrasonic Cleaner 40A</strong>
-            <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2310-0182</p>
-            <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>KBV-80674-83M</p>
-            <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Serious risk of injuries</p>
-            <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe</p>
-          </td>
-          <td class="govuk-table__cell">Submitted</td>
-          <td class="govuk-table__cell">12 Jan 2024</td>
-        </tr>
+            <tr class="govuk-table__row">
+              <td href="product" class="govuk-table__cell" style="color: #1d70b8; text-decoration: none;">
+                <strong>Russell Hobs Proexpress Iron - Electrical fault</strong>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2310-0004</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>JHD-27783-46X</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Electric shock</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe & Non-compliant</p>
+              </td>
+              <td class="govuk-table__cell">Draft</td>
+              <td class="govuk-table__cell">12 Jan 2024</td>
+            </tr>
+            <tr class="govuk-table__row" style="display: none;">
+              <td class="govuk-table__cell" >
+                <a href="notification" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;" >Swan Gas Hob elbow joint failure</a>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0 govuk-!-margin-top-1"><strong>PSD ref: </strong>2401-0067</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Internal ref: </strong>SWA-94673-59N</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Hazard: </strong>Serious risk of poisoning, burns or gas explosion and/or fire</p>
+                <p class="govuk-body-xs govuk-!-margin-bottom-0"><strong>Type: </strong>Unsafe</p>
+              </td>
+              <td class="govuk-table__cell">Submitted</td>
+              <td class="govuk-table__cell">14 Feb 2024</td>
+            </tr>
 
         </tbody>
         </table>
@@ -351,6 +364,41 @@
   </div>
 
   <script>
+
+  document.addEventListener("DOMContentLoaded", function() {
+    var searchButton = document.getElementById("searchButton");
+    searchButton.addEventListener("click", function() {
+      searchTable();
+    });
+
+    function searchTable() {
+      var input, filter, table, tr, td, i, txtValue;
+      input = document.getElementById("searchInput");
+      filter = input.value.toUpperCase();
+      table = document.getElementsByTagName("table")[0];
+      tr = table.getElementsByTagName("tr");
+      var count = 0;
+      for (i = 0; i < tr.length; i++) {
+        td = tr[i].getElementsByTagName("td")[0];
+        if (td) {
+          txtValue = td.textContent || td.innerText;
+          if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            tr[i].style.display = "";
+            count++;
+          } else {
+            tr[i].style.display = "none";
+          }
+        }
+      }
+      // Limiting table to 10 entries
+      if (count > 10) {
+        for (i = 10; i < tr.length; i++) {
+          tr[i].style.display = "none";
+        }
+      }
+    }
+  });
+
     // Function to switch tabs
     function selectTab(event, tabIndex) {
         event.preventDefault();
@@ -439,6 +487,10 @@ function createTag(tagName, checkbox) {
             });
         });
     });
+
+
+
+    
 </script>
   
 
