--- a/app/views/psd-revised-flow/search/search-results.html
+++ b/app/views/psd-revised-flow/search/search-results.html
@@ -108,40 +108,42 @@
         <p id="displayCount"><strong>5</strong> results matching keyword(s) <strong>"SWAN"</strong> were found.
 
         </p>
+    
 
         <hr class="govuk-section-break govuk-section-break govuk-section-break--visible">
 
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
             <dd class="govuk-summary-list__value">
-              <a href="product" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Gas Hob</a>
-              <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Product</p>
-              <p class="govuk-body-s">SXB7040B 60cm and SXB75260SS 60cm hobs</p>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dd class="govuk-summary-list__value">
-              <p class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8;">Swan Gas Hob elbow joint failure</p>
+              <a href="notification" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Gas Hob elbow joint failure</a>
               <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Notification</p>
               <p class="govuk-body-s">Product Safety Report for Swan Gas Hobs presenting a serious risk of poisoning, burns or gas explosion and/or fire.</p>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dd class="govuk-summary-list__value">
-              <p class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8;">Swan Gas Hob - Risk assessment</p>
+              <a href="product" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Gas Hob SXB7040B 60cm</a>
+              <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Product</p>
+              <p class="govuk-body-s">The joints on these hobs are faulty which can lead to gas fires / explosions</p>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dd class="govuk-summary-list__value">
+              <a href="risk-assessment" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Gas Hob SXB7040B 60cm risk assessment</a>
               <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Risk assessment</p>
               <p class="govuk-body-s">Hazard: The hobs present a serious risk of poisoning, burns or gas explosion and/or fire.</p>
             </dd>
           </div>
           <div class="govuk-summary-list__row">
             <dd class="govuk-summary-list__value">
-              <p class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8;">Swan Gas Hob - Test report 1209357862.docx</p>
+              <a href="../../public/pdfs/test-report.pdf" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Gas Hob: Test report 1209357862.docx</a>
               <p class="govuk-body-xs" style="color: #505A5F;">Document</p>
             </dd>
           </div>
           <div class="govuk-summary-list__row">
             <dd class="govuk-summary-list__value">
-              <p class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8;">Swan Trading Ltd</p>
+              <a href="#" class="govuk-heading-s govuk-!-margin-bottom-0" style="color: #1d70b8; text-decoration: none;">Swan Trading Ltd</a>
               <p class="govuk-body-xs govuk-!-margin-bottom-2" style="color: #505A5F;">Business</p>
               <p class="govuk-body-s">Swan Trading Ltd specialises in providing fixing brackets for Pindhurst Level Machinary across the EU and UK.</p>
             </dd>
